# Core-Platform

./: CMakeLists.txt  FixupProjectSettings.ps1  GenerateSolution.bat  LICENSE  README.md
docs/: Class.Headings.txt  File.Headings.txt
extra/: Core-Platform.natvis  DllMain.cpp  main.cpp
include/: corePlatform.h
include/com/: ApplicationTraits.h  AuthLevel.h  AuthService.h  Authorization.h  BStrAllocator.h  BasicString.h  ComApi.h  Function.h  Guid.h  HeapAllocator.h  KnownGuidCollection.h  NoopAllocator.h  SharedPtr.h  TokenAccess.h  Version.h
include/core/: BitwiseEnum.h  CallAdapter.h  CharacterConversion.h  ConstantString.h  DateTime.h  DebugStream.h  Delegate.h  EnumBitset.h  EnumNames.h  Exceptions.h  FunctionLogging.h  Invariant.h  LiteralString.h  LogEntry.h  LogFile.h  LogStream.h  ObservableEvent.h  PostCondition.h  Reflection.h  SignatureAdapter.h  SmartHandle.h  ThrowIfEmpty.h  ThrowIfNot.h  ThrowIfNull.h  ThrowIfOutOfRange.h  ThrowIfUndefined.h  ThrowIfZero.h  ThrowInvalidArg.h  ThrowNotImplemented.h  ToHexString.h  ToString.h  VarLengthStructure.h  ZString.h
include/filesystem/: BinaryReader.h  BinaryWriter.h  DriveCategory.h  EntryCategory.h  FileAttribute.h  FileShare.h  FileSize.h  FileStream.h  FileSystem.h  FileSystemApi.h  FileTime.h  IStream.h  LogFile.h  MemoryStream.h  Origin.h  SearchResult.h  SharedHandle.h  VolumeAttribute.h  VolumeProperties.h  VolumeSpace.h
include/meta/: Concepts.h  IndexedTuple.h  Settings.h  SizeOf.h  TagTypes.h  Tuple.h  TypeTraits.h
include/nstd/: Algorithm.h  Bitset.h  Concepts.h  Coroutine.h  FormatString.h  Functional.h  Future.h  IndexedTuple.h  IoManip.h  Iterator.h  Memory.h  Optional.h  OutPtr.h  Sequence.h  SizeOf.h  SourceLocation.h  String.h  StringView.h  SystemError.h  Thread.h  Tuple.h  TypeTraits.h  Utility.h
include/nstd/experimental/: Abstract.h  Finally.h  Implicit.h  Intern.h  Lambda.h  LengthOf.h  Metafunc.h  NameOf.h  PropagateConst.h  Satisfies.h  Scoped.h
include/nstd/sequence/: enum_sequence.h  is_index_sequence.h  is_integer_sequence.h  is_sequence.h  is_sequence_of.h  is_value_sequence.h  sequence_element.h  sequence_front.h  sequence_length.h  sequence_push_back.h  type_sequence.h  value_sequence.h  value_tuple.h
include/nstd/traits/: add_function_pointer.h  is_function_pointer.h  mirror_cv.h  mirror_cv_ref.h  remove_function_pointer.h
include/nstd/tuple/: is_tuple.h  tuple_back.h  tuple_first_n.h  tuple_front.h  tuple_last_n.h  tuple_push_front.h  tuple_reverse.h  tuple_transform.h
include/nt/: Exception.h  Function.h  NtStatus.h
include/security/: AccessControlEntry.h  AccessControlList.h  AccessControlListIterator.h  AccessRight.h  CommonRight.h  CustomRight.h  Descriptor.h  FileRight.h  GenericRight.h  Group.h  GroupFlag.h  Identifier.h  KeyRight.h  PrivilegeFlag.h  PrivilegeName.h  ProcessRight.h  SecurityApi.h  ServiceManagerRight.h  ServiceRight.h  StandardRight.h  StandardRights.h  ThreadRight.h  Token.h  TokenGroup.h  TokenPrivilege.h  TokenProperty.h  TokenRight.h
include/win/: ApiHelpers.h  AppRegistryKey.h  Boolean.h  BuiltInErrorCodes.h  Concepts.h  Concurrency.h  ConstMultiStringIterator.h  ConstRegistryStringIterator.h  DWord.h  Exception.h  Function.h  HResult.h  LResult.h  ManualResetEvent.h  Module.h  PackedInteger.h  Platform.h  Process.h  RegistryApi.h  RegistryKey.h  RegistryValue.h  ResourceId.h  Service.h  ServiceController.h  ServiceManager.h  SharedHandle.h  SharedLibrary.h  SmartHandle.h  StoppableThread.h  SystemError.h  Thread.h  ThreadCollection.h
sample/: appConsole.cpp  appService.cpp
src/: Optimized.cc  PlatformSdk.h  StdLibrary.h  corePlatform.cpp  libBoost.h
src/com/: ComApi.cpp  Guid.cpp  KnownGuidCollection.cpp
src/core/: CharacterConversion.cpp  DebugStream.cpp  LogStream.cpp  ToString.cpp
src/nstd/: SystemError.cpp
src/nt/: Exception.cpp  NtStatus.cpp
src/security/: SecurityApi.cpp
src/win/: Concurrency.cpp  Exception.cpp  HResult.cpp  LResult.cpp  Module.cpp  Process.cpp  RegistryApi.cpp  RegistryKey.cpp  RegistryValueProxy.cpp  ResourceId.cpp  ServiceManager.cpp
test/: Optimized.cc  Process_SystemTests.cpp  SanityCheck.cpp  SharedLibrary_SystemTests.cpp
test/core/: CharacterConversion_UnitTests.cpp  DateTime_UnitTests.cpp
test/filesystem/: BinaryReader_SystemTests.cpp  FileStream_SystemTests.cpp  FileSystemApi_SystemTests.cpp  FileSystemApi_UnitTests.cpp  MemoryStream_UnitTests.cpp
test/win/: DebugStream_SystemTests.cpp  HResult_UnitTests.cpp  LResult_UnitTests.cpp  LogStream_SystemTests.cpp  PackedInteger_UnitTests.cpp  Process_SystemTests.cpp  Reflection_UnitTests.cpp  RegistryKey_SystemTests.cpp  ServiceManager_SystemTests.cpp  SystemError_UnitTests.cpp
